# candle-lora-flux

./: Cargo.toml  README.md  default.nix
candle-lora-macro/: Cargo.toml
candle-lora-transformers/: Cargo.toml
candle-lora-transformers/src/: lib.rs
candle-lora-transformers/src/flux/: mod.rs  model.rs  model.rs_ORIGINAL  quantized_model.rs  sampling.rs
flux-lora/: Cargo.toml
flux-lora/src/: main.rs
